# Auditeo-AI

./: .env.example  README.md  pyproject.toml  streamlit_app.py
src/auditeo_ai/: __init__.py  main.py
src/auditeo_ai/api/: __init__.py  app.py  server.py
src/auditeo_ai/api/routes/: audit.py
src/auditeo_ai/config/: __init__.py  llms.py
src/auditeo_ai/crews/: audit_crew.py
src/auditeo_ai/crews/insights/: insights_crew.py
src/auditeo_ai/crews/insights/config/: agents.yaml  tasks.yaml
src/auditeo_ai/crews/recommendations/: recommendations_crew.py
src/auditeo_ai/crews/recommendations/config/: agents.yaml  tasks.yaml
src/auditeo_ai/flows/: audit_flow.py
src/auditeo_ai/models/: __init__.py  insights.py  metrics.py  recommendations.py  schemas.py
src/auditeo_ai/tools/: scraper_tool.py
src/auditeo_ai/utils/: __init__.py  format_url.py  generate_report.py  generate_url.py  get_environment.py  logger.py  loop_executor.py
wiki/: Demo.md
